--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 </div>
 
   <div class="content">
-    <p>Intro Hello everyone, I hope you&rsquo;re all well. In this article, we&rsquo;re going to talk about binary files. We&rsquo;ll look at how they are built, what it contains, its structure, and the information contained within each part. the importance of this information, the role of each piece of information, and how we can read and understand it using specialized tools. Understanding the architecture of binary files is vital for reverse engineering and the process of debugging and analyzing the software to determine what it does so you can break it.</p>
+    <p>Intro Hello everyone, I hope you&rsquo;re all well. In this article, we&rsquo;re going to talk about binary files. We&rsquo;ll look at how they are built, what they contain, their structure, and the information contained within each part. the importance of this information, the role of each piece of information, and how we can read and understand it using specialized tools. Understanding the architecture of binary files is vital for reverse engineering and the process of debugging and analyzing the software to determine what it does so you can break it.</p>
     
       <a href="https://0xninjacyclone.github.io/posts/exploitdev_4_binfiles/">Read more...</a>
     
