Update about section

--- a/about/index.html
+++ b/about/index.html
@@ -68,16 +68,17 @@
 	<main>
     <h1>About</h1>
     <h2 id="about-me">About me</h2>
-<p>My name is <strong>Abdallah Mohamed</strong>, studing computer science as a self study<br>
-I&rsquo;m generally interested in cybersecurity, specificaly in offensive part<br>
-Also i really like to read/develop security tools.</p>
-<h2 id="sec-tools-i-developed">Sec tools i developed</h2>
+<p>My name is <strong>Abdallah Mohamed</strong>, aka <strong>0xNinjaCyclone</strong>, and I am highly passionate about computer science and low-level programming.
+I’m generally interested in cybersecurity, specifically in the offensive part, mainly specializing in web and network penetration testing along with
+red-teaming.
+I am more interested in OS internals, reverse engineering, malware/exploit development, and developing security tools.</p>
+<h2 id="security-tools-i-developed">Security tools i developed</h2>
 <ul>
-<li><a href="https://github.com/0xNinjaCyclone/WRock">WRock</a> is a multi web security purposes tool</li>
-<li><a href="https://github.com/0xNinjaCyclone/hellMaker">hellMaker</a> is a backdoors generator with advanced evasions</li>
-<li><a href="https://github.com/0xNinjaCyclone/PowerLoad3r">PowerLoad3r</a> is a malicious powershell scripts loader designed to avoid detection</li>
+<li><a href="https://github.com/0xNinjaCyclone/WRock">WRock</a> is a multi web security purposes tool.</li>
+<li><a href="https://github.com/0xNinjaCyclone/hellMaker">HellMaker</a> is a backdoors generator with advanced evasions.</li>
+<li><a href="https://github.com/0xNinjaCyclone/PowerLoad3r">PowerLoad3r</a> is a malicious powershell scripts loader designed to avoid detection.</li>
 </ul>
-<p>and a lot more, you can check out <a href="https://github.com/0xNinjaCyclone">my github</a>.</p>
+<p>And a lot more, you can check out <a href="https://github.com/0xNinjaCyclone">my GitHub</a>.</p>
 
 	</main>
 
