--- a/about/index.html
+++ b/about/index.html
@@ -99,6 +99,9 @@ I am more interested in OS internals, reverse engineering, malware/exploit devel
          | 
         <a href="https://www.facebook.com/abdallah.elsharif07">Facebook</a>
       
+         | 
+        <a href="https://www.linkedin.com/in/0xNinjaCyclone">Linkedin</a>
+      
     </p>
   
 </footer>
