--- a/index.html
+++ b/index.html
@@ -492,6 +492,9 @@ Any software mainly takes input, does some processing, and then export output, T
          | 
         <a href="https://www.facebook.com/abdallah.elsharif07">Facebook</a>
       
+         | 
+        <a href="https://www.linkedin.com/in/0xNinjaCyclone">Linkedin</a>
+      
     </p>
   
 </footer>
