--- a/404.html
+++ b/404.html
@@ -87,6 +87,9 @@
          | 
         <a href="https://www.facebook.com/abdallah.elsharif07">Facebook</a>
       
+         | 
+        <a href="https://www.linkedin.com/in/0xNinjaCyclone">Linkedin</a>
+      
     </p>
   
 </footer>
